[tool.poetry]
name = "sgcarmart-crawler"
version = "0.1.0"
description = ""
authors = ["longwind48 <longwind48@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pandas = "^1.3.3"
black = {version = "^21.9b0", allow-prereleases = true}
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
